# -3DSSF---1

./: CMakeLists.txt  README.md
data/set_1/: stats.txt
data/set_2/: SSD.ply  SSD_2.ply  stats.txt
data/set_3/: SSD.ply  stats.txt
data/set_4/: stats.txt
data/set_5/: stats.txt
data/set_6/: stats.txt
src/: main.cpp
